# tlib

./: Makefile  README.md  pyproject.toml  pytest.ini
.github/workflows/: release.yaml  release.yml  test.yml
debug/: layernorm_speed.py  testing.py  tree.py
examples/: 1-vector-add.ipynb  2-fused-softmax.ipynb
src/tlib/: traceback_util.py  tree_util.py
src/tlib/backend/: __init__.py  _triton.py
src/tlib/expr/: solver.py
src/tlib/functional/: unary.py
src/tlib/ops/: __init__.py  arange.py  reduce.py  util.py
src/tlib/tracer/: compile.py  optimize.py  tensor.py
src/triton_lib/: __init__.py
src/triton_lib/backend/: _triton.py  base.py  register.py
src/triton_lib/expr/: stage1.py  stage2.py  stage3.py  util.py
src/triton_lib/functional/: __init__.py  activations.py  base.py  binary.py  reductions.py  unary.py  vmap.py
src/triton_lib/nn/: layernorms.py
src/triton_lib/ops/: __init__.py  binary.py  dot.py  rearrange.py  reduce.py  solve.py  unary.py  util.py  vmap_with_axis.py
src/triton_lib/tracer/: __init__.py  compile.py  decorator.py  input.py  tensor.py  tracer.py
tests/: README.md  __init__.py  conftest.py  test_backend.py  test_base.py  test_expr.py  test_nn.py  test_tracer.py  test_utils.py
tests/functional/: __init__.py  test_activations.py  test_base.py  test_binary.py  test_reductions.py  test_unary.py
tests/ops/: __init__.py  test_arange.py  test_binary.py  test_dot.py  test_rearrange.py  test_reduce.py  test_unary.py
