[project]
name = "triton-lib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "hprairie", email = "hprairie17@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "frozendict>=2.4.6",
    "numpy>=2.3.1",
    "sympy>=1.14.0",
    "torch>=2.7.1",
]

[project.scripts]
triton-lib = "triton_lib:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"