[project]
name = "triton-lib"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "hprairie", email = "hprairie17@gmail.com" }
]
requires-python = ">=3.12,<3.14"
dependencies = [
    "frozendict>=2.4.6",
    "numpy>=2.3.1",
    "sympy>=1.14.0",
    "triton>=3.4.0",
]
